- fix, position the notes on focus/hover on top of the rest (set a higher z-index) - fix, set a maximum width in the note window, so that the window doesn't end up on top of the left/right side buttons

--- a/css/basic.css
+++ b/css/basic.css
@@ -110,6 +110,7 @@ a
 .noteContainer:hover, .noteContainer:focus, .dummyNote:hover, .dummyNote:focus, .NoteOnFocus
     {
     transform: scale(1.1);
+    z-index: 100;   /* to have it on top of the other notes */
     }
 
 .dummyNote
@@ -276,6 +277,10 @@ a
  *
  * ************************************/
 
+.NoteWindow
+    {
+    max-width: 75vw;    /* so it doesn't end up on top of the left/right side buttons */
+    }
 
 .NoteWindow-menu
     {
